--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.8.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.3",
+    "@mui/styles": "^5.4.2",
+    "@reduxjs/toolkit": "^1.8.0",
+    "chart.js": "^3.7.1",
+    "lottie-web": "^5.9.1",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-chartjs-2": "^4.0.1",
+    "react-dom": "17.0.2",
+    "react-toastify": "^8.2.0",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "8.10.0",
