--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "alocban",
   "version": "0.1.0",
+  "homepage": "https://alcofree.in/",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -24,10 +25,12 @@
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-toastify": "^8.2.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "sharp": "^0.30.3"
   },
   "devDependencies": {
     "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "^8.5.0"
   }
 }
